@@ -1,5 +1,12 @@
 2008-11-08  Philip Withnall  <philip@tecnocode.co.uk>
 
+	* src/compiler.c:
+	* src/compiler.h:
+	* src/main-window.c: Clean up error highlighting to be more consistent
+	and useful.
+
+2008-11-08  Philip Withnall  <philip@tecnocode.co.uk>
+
 	* src/main-window.c: Ensure the stack is freed when stopping the
 	simulation.
 
